added template boilerplate

--- a/views/home.html
+++ b/views/home.html
@@ -1,1 +1,8 @@
-something something..
+{%extends "layout.html"%}
+{%block title%} Login Registration Example {%endblock%}
+{%block content%}
+<div class="jumbotron">
+    <h1>Welcome</h1>
+    <h3>Login Registration Example</h3>
+</div>
+{%endblock%}
